--- a/AOSPASettingsTranslation/res/values-pt-rBR/aospa_strings.xml
+++ b/AOSPASettingsTranslation/res/values-pt-rBR/aospa_strings.xml
@@ -92,15 +92,102 @@
     <string name="keywords_display_dc_dimming">dc dimming, anti flicker, proteção para os olhos</string>
     <string name="system_black_theme_title">Preto puro</string>
     <string name="system_black_theme_summary">Usar preto puro como cor de fundo</string>
-    <string name="doze_gesture_ambient_title">Pulsar exibição ambiente</string>
-    <string name="doze_gesture_ambient_summary">Pulsar exibição ambiente ao invés de ligar completamente a tela</string>
-    <string name="gesture_wake_ambient">Pulsar exibição ambiente</string>
-    <string name="gesture_wake">Ligar totalmente</string>
-    <string name="doze_enabled_title">Exibição ambiente</string>
-    <string name="doze_enabled_summary">Se deve habilitar a função doze</string>
+    <string name="doze_gesture_ambient_summary">Mostrar notificações, horário e informações em vez de ligar totalmente a tela</string>
+    <string name="doze_enabled_summary">Ativar as funcionalidades do recurso Doze</string>
     <string name="navbar_invert_layout_title">Inverter os botões da barra de navegação</string>
     <string name="navbar_invert_info">Inverter os botões \"Voltar\" e \"Recentes\" na barra de navegação</string>
     <string name="notification_vibration_pattern_title">Padrão de vibração da notificação</string>
     <string name="ring_vibration_pattern_title">Padrão de vibração do toque</string>
     <string name="pattern_default">Padrão do dispositivo</string>
+    <string name="touch_polling_title">Alta taxa de atualização do toque</string>
+    <string name="touch_polling_summary">Aumentar a taxa de atualização do toque para reduzir a latência</string>
+    <string name="show_navbar_gesture_bar_title">Barra de navegação</string>
+    <string name="show_navbar_gesture_bar_summary">Mostrar a barra de navegação na parte inferior da tela</string>
+    <string name="volume_separate_notification_title">Toque e notificação separados</string>
+    <string name="volume_separate_notification_summary">Permite controlar cada canal individualmente</string>
+    <string name="build_date">Data da compilação</string>
+    <string name="accessibility_text_reading_options_summary">Personalizar tamanho de exibição, fonte &amp; texto</string>
+    <string name="global_actions_advanced_reboot_title">Reinicialização avançada</string>
+    <string name="global_actions_advanced_reboot_summary">Mostrar opções avançadas de reinicialização no menu de energia</string>
+    <string name="ignore_window_secure_title">Ignorar restrições de tela</string>
+    <string name="ignore_window_secure_summary">Remove os limites de captura de tela para todos os aplicativos. Isso pode ser conveniente em alguns casos porém pode levar a vazamentos de privacidade</string>
+    <string name="show_clipboard_overlay_title">Mostrar sobreposição da área de transferência</string>
+    <string name="show_clipboard_overlay_summary">Exibe uma sobreposição no canto inferior esquerdo da tela quando algo é copiado para a área de transferência</string>
+    <string name="hide_developer_status_title">Status de desenvolvedor</string>
+    <string name="hide_developer_status_summary">Controle de qual aplicativo o status de desenvolvedor deve ser ocultado</string>
+    <string name="min_refresh_rate_title">Taxa de atualização mínima</string>
+    <string name="max_refresh_rate_title">Taxa de atualização máxima</string>
+    <string name="game_space_summary">Melhore sua experiência ao jogar</string>
+    <string name="copied_to_clipboard">Copiado para a área de transferência</string>
+    <string name="longpress_to_clipboard">Pressione e segure para copiar</string>
+    <string name="usb_default_config_summary">Configure o comportamento padrão quando um dispositivo USB for conectado</string>
+    <string name="allow_signature_fake">Permitir falsificação de assinatura</string>
+    <string name="allow_signature_fake_summary">Permitir que os aplicativos ignorem os sistemas de segurança fingindo ser um aplicativo diferente</string>
+    <string name="tethering_allow_vpn_upstreams_title">Permitir que os clientes usem VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permite que clientes do ponto de acesso usem as conexões VPN deste dispositivo</string>
+    <string name="statusbar_icons_style">Ícones da barra de status coloridos</string>
+    <string name="statusbar_icons_style_summary">Usa a cor e formato do ícone do aplicativo para os ícones de notificação na barra de status</string>
+    <string name="battery_light_title">Luz da bateria</string>
+    <string name="enable_floating_rotation_button_title">Botão flutuante de rotação</string>
+    <string name="smooth_display_intro">Aumenta automaticamente para a taxa de atualização selecionada ao tocar na tela. Aumenta o uso da bateria.</string>
+    <string name="smooth_display_switch">Usar o Smooth Display</string>
+    <string name="battery_stats_reset">Limpar estatísticas?</string>
+    <string name="battery_stats_message">Os dados do uso da bateria serão perdidos</string>
+    <string name="radio_info_title">Informações de rádio</string>
+    <string name="network_traffic_title">Indicador de tráfego de rede</string>
+    <string name="network_traffic_summary">Exibe a velocidade da internet na barra de status</string>
+    <string name="network_traffic_switch_title">Usar o indicador de tráfego de rede</string>
+    <string name="network_traffic_options_title">Opções</string>
+    <string name="network_traffic_autohide_title">Ocultar automaticamente</string>
+    <string name="network_traffic_autohide_summary">Quando a velocidade estiver abaixo de 1 KB/s</string>
+    <string name="wifi_hotspot_hidden_ssid_title">Rede oculta</string>
+    <string name="wifi_hotspot_hidden_ssid_summary">Ocultar o nome do hotspot na lista de redes Wi-Fi disponíveis</string>
+    <string name="wifi_hotspot_client_manager_title">Dispositivos conectados</string>
+    <string name="wifi_hotspot_client_manager_summary">Listar e gerenciar dispositivos conectados ao hotspot</string>
+    <string name="wifi_hotspot_client_manager_list_only_summary">Listar dispositivos conectados ao hotspot</string>
+    <string name="wifi_hotspot_client_limit_title">Limite de dispositivos conectados</string>
+    <string name="wifi_hotspot_blocked_clients_list_title">Dispositivos bloqueados</string>
+    <string name="wifi_hotspot_connected_clients_list_title">Dispositivos conectados</string>
+    <string name="wifi_hotspot_block_client_dialog_title">Bloquear dispositivo</string>
+    <string name="wifi_hotspot_block_client_dialog_text">Essa ação desconectará "<xliff:g id="device_name">%1$s</xliff:g>" deste dispositivo e o adicionará à lista de bloqueio</string>
+    <string name="wifi_hotspot_unblock_client_dialog_title">Desbloquear dispositivo</string>
+    <string name="wifi_hotspot_unblock_client_dialog_text">O dispositivo "<xliff:g id="device_name">%1$s</xliff:g>" poderá se conectar a este hotspot</string>
+    <string name="wifi_hotspot_client_manager_footer_text">Não há clientes disponíveis no momento. Dispositivos conectados e bloqueados serão listados aqui quando disponíveis.</string>
+    <plurals name="wifi_hotspot_client_limit_summary">
+        <item quantity="other">Até <xliff:g id="device_num">%1$d</xliff:g> dispositivos podem se conectar a este hotspot</item>
+        <item quantity="one">Apenas um dispositivo pode se conectar a este hotspot</item>
+    </plurals>
+    <string name="heads_up_summary">Mostrar notificações selecionadas como um banner na parte superior da tela</string>
+    <string name="heads_up_off">Heads up estão desativados globalmente</string>
+    <string name="less_boring_heads_up_title">Heads up mais sensato</string>
+    <string name="less_boring_heads_up_summary">Mostrar avisos importantes apenas para chamadas, mensagens, alarmes, lembretes e conversas prioritárias</string>
+    <string name="notification_sound_vib_screen_on_title">Notificações irritantes</string>
+    <string name="notification_sound_vib_screen_on_summary">Reproduzir som e vibração para notificações quando a tela está ligada</string>
+    <string name="enable_fingerprint_ripple_effect_title">Animação de desbloqueio</string>
+    <string name="enable_fingerprint_ripple_effect_summary">Mostrar efeito de ondulação ao desbloquear com impressão digital</string>
+    <string name="enable_blurs_on_windows_title">Desfoques</string>
+    <string name="enable_blurs_on_windows_summary">Desfocar alguns elementos da interface</string>
+    <string name="proximity_wake_title">Evitar ativação acidental</string>
+    <string name="proximity_wake_summary">Verificar o sensor de proximidade antes de ativar a tela</string>
+    <string name="lockscreen_media_art_title">Exibir capa do álbum</string>
+    <string name="charging_control_title">Controle de Carregamento</string>
+    <string name="charging_control_summary">Personalize o cronograma e os limites de carregamento para a bateria</string>
+    <string name="charging_control_enable_title">Habilitar controle de carregamento</string>
+    <string name="charging_control_mode_title">Modo de Carregamento</string>
+    <string name="charging_control_mode_auto_title">Programação automática</string>
+    <string name="charging_control_mode_auto_summary">Determina automaticamente quando iniciar o carregamento com base nos alarmes configurados</string>
+    <string name="charging_control_mode_custom_title">Programação personalizada</string>
+    <string name="charging_control_mode_custom_summary">Defina um horário-alvo para carga completa</string>
+    <string name="charging_control_mode_limit_title">Limitar carregamento</string>
+    <string name="charging_control_mode_limit_summary">Limite o carregamento a uma porcentagem específica</string>
+    <string name="charging_control_start_time_title">Horário de início</string>
+    <string name="charging_control_start_time_summary">O controle de carregamento ativa quando você inicia o carregamento após %s</string>
+    <string name="charging_control_target_time_title">Horário-alvo para carga completa</string>
+    <string name="charging_control_target_time_summary">A bateria estará totalmente carregada até %s</string>
+    <string name="charging_control_limit_title">Limite</string>
+    <string name="reset">Redefinir</string>
+    <string name="category_name_gestures">Gestos</string>
+    <string name="sound_settings_advanced_title">Sons adicionais</string>
+    <string name="doze_on_charge_title">Sempre ativo durante o carregamento</string>
+    <string name="doze_on_charge_summary">Sempre exibe a hora e informações apenas quando o dispositivo está conectado ao carregador</string>
 </resources>
