--- a/ParanoidLauncherTranslation/res/values-pt-rBR/aospa_strings.xml
+++ b/ParanoidLauncherTranslation/res/values-pt-rBR/aospa_strings.xml
@@ -16,7 +16,7 @@
 * limitations under the License.
 */
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="title_show_google_feed">Deslizar para acessar o Google app</string>
     <string name="msg_minus_one_on_left">Na tela inicial, deslizar para a esquerda para abrir o Google app</string>
     <string name="msg_minus_one_on_right">Na tela inicial, deslizar para a direita para abrir o Google app</string>
@@ -33,6 +33,13 @@
     <string name="category_icon">Ícones</string>
     <string name="category_misc">Diversos</string>
     <string name="category_google">Google</string>
+    <string name="category_recents">Recentes</string>
+    <string name="recents_screenshot_title">Captura de tela</string>
+    <string name="recents_clear_all_title">Limpar tudo</string>
+    <string name="show_lens_button_title">Mostrar botão do Google Lens</string>
+    <string name="show_lens_button_summary">Se disponível, substitui o botão de captura de tela pelo botão do Google Lens</string>
+    <string name="overview_clear_all_title">Mover botão de Limpar tudo</string>
+    <string name="overview_clear_all_summary">Move o botão de Limpar tudo para a parte inferior dos Recentes</string>
     <string name="action_lens">Lens</string>
     <string name="label_search">Pesquisar</string>
     <string name="label_lens">Google Lens</string>
@@ -42,4 +49,28 @@
     <string name="smartspace_pref_title">Resumo</string>
     <string name="smartspace_pref_summary">Mostrar o resumo no topo da tela inicial</string>
     <string name="show_top_shadow">Mostrar sombra na parte superior da tela</string>
+    <string name="recent_task_option_kill_app">Forçar fechamento</string>
+    <string name="recents_app_killed">Aplicativo fechado</string>
+    <string name="app_info_icon_pack">Pacote de ícones</string>
+    <string name="app_info_icon_pack_none">Nenhum</string>
+    <string name="app_info_source">Fonte</string>
+    <string name="app_info_source_system">Sistema</string>
+    <string name="app_info_last_update">Última atualização</string>
+    <string name="app_info_version">Versão</string>
+    <string name="app_info_more">Mais</string>
+    <string name="icon_pack_title">Pacote de ícones</string>
+    <string name="icon_pack_default_label">Padrão</string>
+    <string name="icon_pack_add">Instalar mais</string>
+    <string name="icon_pack_no_market">Não há nenhuma loja de aplicativos disponível</string>
+    <string name="custom_seekbar_value">Valor: <xliff:g id="v">%s</xliff:g></string>
+    <string name="custom_seekbar_default_value">por padrão</string>
+    <string name="custom_seekbar_default_value_to_set">Valor padrão: <xliff:g id="v">%s</xliff:g>\nToque longo para redefinir</string>
+    <string name="custom_seekbar_default_value_is_set">O valor padrão foi redefinido</string>
+    <string name="icon_size_title">Tamanho do ícone</string>
+    <string name="font_size_title">Tamanho da fonte</string>
+    <string name="pref_themed_icons_title">Ícones temáticos</string>
+    <string name="pref_themed_icons_summary">Ativar ícones temáticos na gaveta de aplicativos</string>
+    <string name="faster_sb_expansion">Expansão acelerada da barra de status</string>
+    <string name="pref_allapps_themed_icons">Ícones temáticos na gaveta</string>
+    <string name="themed_icons_disabled_summary">Os ícones temáticos estão desativados em Planos de fundo e estilo</string>
 </resources>
