--- a/ParanoidSystemUITranslation/res/values-pt-rBR/aospa_strings.xml
+++ b/ParanoidSystemUITranslation/res/values-pt-rBR/aospa_strings.xml
@@ -38,5 +38,34 @@
     <string name="quick_settings_powershare_enabled_label">PowerShare ativado</string>
     <string name="turn_on_bluetooth">Bluetooth</string>
     <string name="bluetooth_is_off">Bluetooth desligado</string>
-    <string name="tap_a_device_to_connect">Toque em um dispositivo para se conectar/desconectar</string>
+    <string name="tap_a_device_to_connect">Toque em um dispositivo para se conectar ou desconectar</string>
+    <string name="status_bar_icons">Ícones da barra de status</string>
+    <string name="status_bar_wifi_standard">Banda do Wi-Fi</string>
+    <string-array name="battery_options_custom">
+        <item>Mostrar apenas porcentagem (sem ícone)</item>
+        <item>Sempre mostrar porcentagem (com ícone)</item>
+        <item>Mostrar porcentagem ao carregar (padrão)</item>
+        <item>Não mostrar este ícone</item>
+    </string-array>
+    <string name="global_action_restart_advanced">Avançado</string>
+    <string name="global_action_restart_ui">Interface do sistema</string>
+    <string name="drag_to_add_tiles">Pressione nos tiles para adicionar ou remover</string>
+    <string name="status_bar_data_saver">Economia de dados</string>
+    <string name="status_bar_roaming">Indicador de roaming</string>
+    <string name="screenrecord_delete_label">Excluir</string>
+    <string name="screenrecord_delete_description">Gravação de tela excluída</string>
+    <string name="screenshot_delete_label">Excluir</string>
+    <string name="screenshot_delete_description">Excluir captura de tela</string>
+    <string name="refresh_rate_tile_label">Taxa de atualização</string>
+    <string name="auto_mode_label">Variável</string>
+    <string name="status_bar_network_activity">Atividade de rede</string>
+    <string name="status_bar_location">Localização</string>
+    <string name="status_bar_microphone">Microfone</string>
+    <string name="force_hbm">Forçar HBM</string>
+    <string name="auto_brightness_is_off">O brilho automático está desativado</string>
+    <string name="quick_settings_usb_tether_label">Tethering USB</string>
+    <string name="quick_settings_sound_label">Som</string>
+    <string name="quick_settings_sound_ring">Toque</string>
+    <string name="quick_settings_sound_vibrate">Vibrar</string>
+    <string name="quick_settings_sound_silent">Silencioso</string>
 </resources>
