--- a/ParanoidSystemUITranslation/res/values-pt-rBR/aospa_strings.xml
+++ b/ParanoidSystemUITranslation/res/values-pt-rBR/aospa_strings.xml
@@ -44,4 +44,42 @@
     <string name="quick_settings_sound_ring">Tocar</string>
     <string name="quick_settings_sound_vibrate">Vibrar</string>
     <string name="quick_settings_sound_silent">Silencioso</string>
+
+    <string name="screenshot_delete_label">Excluir</string>
+    <string name="screenshot_delete_description">Excluir captura de tela</string>
+    <string name="drag_to_add_tiles">Pressione nos tiles para adicionar ou remover</string>
+    <string name="status_bar_icons">Barra de status</string>
+    <string name="status_bar_roaming">Indicador de roaming</string>
+    <string name="status_bar_data_saver">Economia de dados</string>
+    <string name="status_bar_wifi_standard">Banda do Wi-Fi</string>
+    <string name="status_bar_location">Localização</string>
+    <string name="status_bar_microphone">Microfone</string>
+    <string name="face_unlock_recognizing">Reconhecendo o rosto...</string>
+    <string name="screenrecord_delete_label">Excluir</string>
+    <string name="screenrecord_delete_description">Gravação de tela excluída</string>
+    <string name="global_action_restart_advanced">Avançado</string>
+    <string name="global_action_restart_ui">Interface do sistema</string>
+    <plurals name="quick_settings_internet_hotspot_summary_num_devices">
+        <item quantity="one">%d dispositivo conectado</item>
+        <item quantity="other">%d dispositivos conectados</item>
+    </plurals>
+    <string name="accessibility_quick_settings_location_off">Localização: desligada.</string>
+    <string name="quick_settings_location_secondary_battery_saving">Econômico</string>
+    <string name="accessibility_quick_settings_location_battery_saving">Localização: economia.</string>
+    <string name="quick_settings_location_secondary_gps_only">Sensores</string>
+    <string name="accessibility_quick_settings_location_gps_only">Localização: sensores.</string>
+    <string name="quick_settings_location_secondary_high_accuracy">Preciso</string>
+    <string name="accessibility_quick_settings_location_high_accuracy">Localização: alta precisão.</string>
+    <string name="quick_settings_volume_panel_label">Painel de volume</string>
+    <string name="quick_settings_preferred_network_label">Rede preferida</string>
+    <string name="quick_settings_preferred_network_lte">4G / LTE</string>
+    <string name="quick_settings_preferred_network_nr">5G / NR</string>
+    <string name="quick_settings_preferred_network_unsupported">Não suportada</string>
+    <string name="usb_use_charging_only">Nenhuma transferência de dados</string>
+    <string name="usb_use_file_transfers">Transferência de arquivo</string>
+    <string name="usb_use_photo_transfers">PTP (fotos)</string>
+    <string name="usb_use_uvc_webcam">Webcam</string>
+    <string name="usb_use_tethering">Tethering USB</string>
+    <string name="usb_use_MIDI">Conexão MIDI (som)</string>
+    <string name="usb_use">Usar USB para</string>
 </resources>
