--- a/AOSPASettingsTranslation/res/values-pt-rBR/aospa_strings.xml
+++ b/AOSPASettingsTranslation/res/values-pt-rBR/aospa_strings.xml
@@ -79,13 +79,8 @@
     <string name="power_button_torch_summary">Quando a tela estiver desligada, segure o botão liga/desliga para ativar a lanterna</string>
     <string name="icon_manager_title">Gerenciador de ícones</string>
     <string name="icon_manager_summary">Controlar a visibilidade de ícones da barra de status</string>
-    <string name="navbar_category">Barra de gestos</string>
     <string name="navbar_invert_layout_title">Inverter os botões da barra de navegação</string>
     <string name="navbar_invert_info">Inverter os botões \"Voltar\" e \"Recentes\" na barra de navegação</string>
-    <string name="hide_navbar_gesture_bar_title">Ocultar barra de gestos</string>
-    <string name="hide_navbar_gesture_bar_summary">Ocultar a barra de gestos na parte inferior da tela</string>
-    <string name="system_black_theme_title">Preto puro</string>
-    <string name="system_black_theme_summary">Usar preto puro como cor de fundo</string>
     <string name="charging_control_title">Carregamento inteligente</string>
     <string name="charging_control_summary">Programar o período de carregamento ou definir limites de carga</string>
     <string name="charging_control_enable_title">Ativar carregamento inteligente</string>
@@ -102,10 +97,6 @@
     <string name="charging_control_target_time_summary">A bateria estará totalmente carregada às %s</string>
     <string name="charging_control_limit_title">Limitar</string>
     <string name="reset">Redefinir</string>
-    <string name="doze_gesture_ambient_title">Pulsar exibição ambiente</string>
-    <string name="doze_gesture_ambient_summary">Pulsar exibição ambiente ao invés de ligar completamente a tela</string>
-    <string name="gesture_wake_ambient">Pulsar exibição ambiente</string>
-    <string name="gesture_wake">Ligar totalmente</string>
     <string name="color_mode_balance_category">Balanço de cores</string>
     <string name="color_mode_balance_red">Nível de vermelho</string>
     <string name="color_mode_balance_green">Nível de verde</string>
@@ -135,13 +126,6 @@
     <string name="ambient_notification_light_accent_title">Cor de destaque do sistema</string>
     <string name="ambient_notification_light_color_automatic_title">Cor da notificação</string>
     <string name="pulse_ambient_light_color">Ao pulsar, use</string>
-    <string name="refresh_rate_title">Taxa de atualização</string>
-    <string name="refresh_rate_summary_vrr_off">%d Hz</string>
-    <string name="refresh_rate_summary_vrr_on">%d Hz (Adaptável)</string>
-    <string name="refresh_rate_vrr_title">Taxa de atualização adaptável</string>
-    <string name="refresh_rate_vrr_summary">Reduza automaticamente a taxa de atualização quando a tela estiver ociosa para economizar energia. Pode causar cintilação ou mudança de cor em determinadas telas.</string>
-    <string name="refresh_rate_footer">Uma taxa de atualização mais alta torna a tela mais suave, mas aumenta o consumo de energia.</string>
-    <string name="keywords_refresh_rate">atualização, taxa, suave, pico, 60hz, 90hz, 120hz, 144hz, 165hz</string>
     <string name="battery_technology">Tecnologia</string>
     <string name="battery_health">Saúde</string>
     <string name="battery_health_good">Boa</string>
@@ -164,4 +148,90 @@
     <string name="notification_vibration_pattern_title">Padrão de vibração da notificação</string>
     <string name="ring_vibration_pattern_title">Padrão de vibração do toque</string>
     <string name="pattern_default">Padrão do dispositivo</string>
+
+    <string name="system_black_theme_title">Preto puro</string>
+    <string name="system_black_theme_summary">Tema escuro com fundo preto absoluto</string>
+    <string name="doze_gesture_ambient_summary">Mostrar notificações, horário e informações em vez de ligar totalmente a tela</string>
+    <string name="build_date">Data da compilação</string>
+    <string name="charging_battery_light_title">Luz de carregamento da bateria</string>
+    <string name="charging_battery_light_summary">Acender a luz enquanto carrega a bateria</string>
+    <string name="low_battery_light_title">Luz de bateria fraca</string>
+    <string name="low_battery_light_summary">Piscar a luz quando a bateria estiver fraca</string>
+    <string name="enable_floating_rotation_button_title">Botão flutuante de rotação</string>
+    <string name="tethering_allow_vpn_upstreams_title">Permitir que os clientes usem VPNs</string>
+    <string name="tethering_allow_vpn_upstreams_summary">Permite que clientes do ponto de acesso usem as conexões VPN deste dispositivo</string>
+    <string name="game_space_title">Espaço de jogos</string>
+    <string name="game_space_summary">Melhore sua experiência ao jogar</string>
+    <string name="copied_to_clipboard">Copiado para a área de transferência</string>
+    <string name="longpress_to_clipboard">Pressione e segure para copiar</string>
+    <string name="ignore_window_secure_title">Ignorar restrições de tela</string>
+    <string name="ignore_window_secure_summary">Remove os limites de captura de tela para todos os aplicativos. Isso pode ser conveniente em alguns casos porém pode levar a vazamentos de privacidade</string>
+    <string name="less_boring_heads_up_title">Heads up mais sensato</string>
+    <string name="less_boring_heads_up_summary">Mostrar avisos importantes apenas para chamadas, mensagens, alarmes, lembretes e conversas prioritárias</string>
+    <string name="min_refresh_rate_title">Taxa de atualização mínima</string>
+    <string name="max_refresh_rate_title">Taxa de atualização máxima</string>
+    <string name="network_traffic_title">Indicador do tráfego de rede</string>
+    <string name="network_traffic_summary">Exibe a velocidade da internet na barra de status</string>
+    <string name="network_traffic_switch_title">Usar o indicador do tráfego de rede</string>
+    <string name="network_traffic_options_title">Opções</string>
+    <string name="network_traffic_autohide_title">Ocultar automaticamente</string>
+    <string name="network_traffic_autohide_summary">Quando a velocidade estiver abaixo de 1 KB/s</string>
+    <string name="accessibility_text_reading_options_summary">Personalize o tamanho da tela, fonte e texto</string>
+    <string name="background_processes_settings_title">Processos em segundo plano</string>
+    <string name="platform_revision">Plataforma</string>
+    <string name="total_ram">Total de RAM</string>
+    <string name="auto_brightness_one_shot_title">Brilho automático momentâneo</string>
+    <string name="auto_brightness_one_shot_summary">Ajuste de brilho ocorrerá apenas no momento em que a tela for ligada</string>
+    <string name="category_name_gestures_indicators">Indicadores de gestos</string>
+    <string name="hide_navbar_gesture_bar_title">Ocultar barra de gestos</string>
+    <string name="hide_navbar_gesture_bar_summary">Ocultar a barra de gestos na parte inferior da tela</string>
+    <string name="back_gesture_arrow_title">Animação no gesto de voltar</string>
+    <string name="back_gesture_arrow_summary">Mostrar uma seta animada para o gesto de voltar</string>
+    <string name="qs_show_brightness_slider_title">Barra de brilho</string>
+    <string name="qs_show_brightness_slider_never">Nunca mostrar</string>
+    <string name="qs_show_brightness_slider_expanded">Mostrar apenas quando expandido</string>
+    <string name="qs_show_brightness_slider_always">Mostrar sempre</string>
+    <string name="qs_brightness_slider_position_title">Posição</string>
+    <string name="qs_brightness_slider_position_top">Parte superior</string>
+    <string name="qs_brightness_slider_position_bottom">Parte inferior</string>
+    <string name="enable_fingerprint_ripple_effect_title">Animação de desbloqueio</string>
+    <string name="enable_fingerprint_ripple_effect_summary">Mostrar animação ao desbloquear usando a impressão digital</string>
+    <string name="pulse_ambient_light_switch">Usar a iluminação de borda</string>
+    <string name="scroll_fling_haptic_feedback_title">Vibração ao rolar</string>
+    <string name="scroll_fling_haptic_feedback_summary">Vibrar ao chegar ao fim da página</string>
+    <string name="app_volume">Volume do app</string>
+    <string name="app_volume_title">Controle de volume por app</string>
+    <string name="app_volume_summary">Permitir definir diferentes níveis de volume para cada app</string>
+    <string name="app_lock_title">Bloqueio de aplicativos</string>
+    <plurals name="app_lock_summary">
+        <item quantity="one"><xliff:g example="1" id="Number of applications">%1$d</xliff:g> aplicativo está protegido</item>
+        <item quantity="other"><xliff:g example="10" id="Number of applications">%1$d</xliff:g> aplicativos estão protegidos</item>
+    </plurals>
+    <string name="app_lock_authentication_dialog_title">Desbloquear</string>
+    <string name="enable_debugging">Ativar depuração</string>
+    <string name="disable_debugging">Desativar depuração</string>
+    <string name="app_lock_packages_title">Aplicativos protegidos</string>
+    <string name="app_lock_packages_summary">Selecione os aplicativos para proteger com biometria ou credenciais do dispositivo</string>
+    <string name="app_lock_timeout_title">Tempo limite de bloqueio automático</string>
+    <string name="app_lock_timeout_summary">Duração de tempo após a qual um aplicativo desbloqueado em segundo plano deve ser bloqueado</string>
+    <string name="app_lock_notifications_title">Ocultar notificações</string>
+    <string name="app_lock_notifications_summary">
+        O conteúdo das notificações dos aplicativos selecionados será oculto e colapsado quando eles estiverem bloqueados.
+        Notificações flutuantes serão desativadas automaticamente.
+    </string>
+    <string name="app_lock_notifications_disabled_summary">Primeiro proteja um aplicativo</string>
+    <string name="app_lock_biometrics_allowed_title">Habilitar biometria para desbloquear</string>
+    <string name="app_lock_footer_text">Balões de notificação serão automaticamente dispersos após o tempo limite</string>
+    <string name="enable_protection">Ativar proteção</string>
+    <string name="hide_from_launcher_title">Ocultar da tela inicial</string>
+    <string name="hide_from_launcher_summary">
+        Impeça que esse aplicativo apareça na tela inicial. É necessário reiniciar o launcher para que as alterações tenham efeito.
+    </string>
+    <string name="app_lock_timeout_5sec">5 segundos</string>
+    <string name="app_lock_timeout_10sec">10 segundos</string>
+    <string name="app_lock_timeout_30sec">30 segundos</string>
+    <string name="app_lock_timeout_1min">1 minuto</string>
+    <string name="app_lock_timeout_5min">5 minutos</string>
+    <string name="app_lock_timeout_10min">10 minutos</string>
+    <string name="app_lock_timeout_30min">30 minutos</string>
 </resources>
